Working through the basics chapter, numerous links that need to be updated. Should have a discussion on twitter links and non-English learning materials

--- a/new_pages/basics.qmd
+++ b/new_pages/basics.qmd
@@ -40,7 +40,7 @@ The R community of users is enormous and collaborative. New packages and tools t
 
 **RStudio** - RStudio is a Graphical User Interface (GUI) for easier use of **R**. Read more [in the RStudio section](#rstudio).
 
-**Objects** - Everything you store in R - datasets, variables, a list of village names, a total population number, even outputs such as graphs - are *objects* which are *assigned a name* and *can be referenced* in later commands. Read more [in the Objects section](#objects).
+**Objects** - Everything you store in R - datasets, variables, a list of village names, a total population number, even outputs such as graphs - are *objects* which are *assigned a name* and *can be referenced* in later commands. Read more in the [Objects section](#objects).
 
 **Functions** - A function is a code operation that accept inputs and returns a transformed output. Read more [in the Functions section](#functions).
 
@@ -70,20 +70,20 @@ The R package [**swirl**](https://swirlstats.com/) offers interactive courses in
 
 There are many PDF "cheatsheets" available on the [RStudio website](https://rstudio.com/resources/cheatsheets/), for example:
 
--   Factors with **forcats** package\
--   Dates and times with **lubridate** package\
--   Strings with **stringr** package\
--   iterative opertaions with **purrr** package\
--   Data import\
--   Data transformation cheatsheet with **dplyr** package\
--   R Markdown (to create documents like PDF, Word, Powerpoint...)\
--   Shiny (to build interactive web apps)\
--   Data visualization with **ggplot2** package\
--   Cartography (GIS)\
--   **leaflet** package (interactive maps)\
--   Python with R (**reticulate** package)
+-   Factors with **forcats** package.\
+-   Dates and times with **lubridate** package.\
+-   Strings with **stringr** package.\
+-   iterative opertaions with **purrr** package.\
+-   Data import.\
+-   Data transformation cheatsheet with **dplyr** package.\
+-   R Markdown (to create documents like PDF, Word, Powerpoint...).\
+-   Shiny (to build interactive web apps).\
+-   Data visualization with **ggplot2** package.\
+-   Cartography (GIS).\
+-   **leaflet** package (interactive maps).\
+-   Python with R (**reticulate** package).
 
-This is an online R resource specifically for [Excel users](https://jules32.github.io/r-for-excel-users/)
+This is an online R resource specifically for [Excel users](https://jules32.github.io/r-for-excel-users/).
 
 ### Twitter {.unnumbered}
 
@@ -91,7 +91,6 @@ R has a vibrant twitter community where you can learn tips, shortcuts, and news 
 
 -   Follow us! [\@epiRhandbook](https://twitter.com/epirhandbook)\
 -   R Function A Day [\@rfuntionaday](https://twitter.com/rfunctionaday) is an *incredible* resource\
--   R for Data Science [\@rstats4ds](https://twitter.com/rstats4ds?lang=en)\
 -   RStudio [\@RStudio](https://twitter.com/rstudio?lang=en)\
 -   RStudio Tips [\@rstudiotips](https://twitter.com/rstudiotips)\
 -   R-Bloggers [\@Rbloggers](https://twitter.com/Rbloggers)\
@@ -104,9 +103,9 @@ Also:
 
 ### Free online resources {.unnumbered}
 
-A definitive text is the [R for Data Science](https://r4ds.had.co.nz/) book by Garrett Grolemund and Hadley Wickham
+A definitive text is the [R for Data Science](https://r4ds.had.co.nz/) book by Garrett Grolemund and Hadley Wickham.
 
-The [R4Epis](https://r4epis.netlify.app/) project website aims to "develop standardised data cleaning, analysis and reporting tools to cover common types of outbreaks and population-based surveys that would be conducted in an MSF emergency response setting." You can find R basics training materials, templates for RMarkdown reports on outbreaks and surveys, and tutorials to help you set them up.
+The [R4Epis](https://r4epis.netlify.app/) project website aims to "develop standardised data cleaning, analysis and reporting tools to cover common types of outbreaks and population-based surveys that would be conducted in an MSF emergency response setting". You can find R basics training materials, templates for RMarkdown reports on outbreaks and surveys, and tutorials to help you set them up.
 
 ### Languages other than English {.unnumbered}
 
@@ -135,9 +134,9 @@ Note that you should install R and RStudio to a drive where you have read and wr
 
 Your version of R is printed to the R Console at start-up. You can also run `sessionInfo()`.
 
-To update R, go to the website mentioned above and re-install R. Alternatively, you can use the **installr** package (on Windows) by running `installr::updateR()`. This will open dialog boxes to help you download the latest R version and update your packages to the new R version. More details can be found in the **installr** [documentation](https://www.r-project.org/nosvn/pandoc/installr.html).
+To update R, go to the website mentioned above and re-install R. Alternatively, you can use the **installr** package (on Windows) by running `installr::updateR()`. This will open dialog boxes to help you download the latest R version and update your packages to the new R version. More details can be found in the **installr** [documentation](https://talgalili.github.io/installr/).
 
-Be aware that the old R version will still exist in your computer. You can temporarily run an older version (older "installation") of R by clicking "Tools" -\> "Global Options" in RStudio and choosing an R version. This can be useful if you want to use a package that has not been updated to work on the newest version of R.
+Be aware that the old R version will still exist in your computer. You can temporarily run an older version of R by clicking "Tools" -\> "Global Options" in RStudio and choosing an R version. This can be useful if you want to use a package that has not been updated to work on the newest version of R.
 
 To update RStudio, you can go to the website above and re-download RStudio. Another option is to click "Help" -\> "Check for Updates" within RStudio, but this may not show the very latest updates.
 
@@ -145,10 +144,10 @@ To see which versions of R, RStudio, or packages were used when this Handbook as
 
 ### Other software you *may* need to install {.unnumbered}
 
--   TinyTeX (*for compiling an RMarkdown document to PDF*)\
--   Pandoc (*for compiling RMarkdown documents*)\
--   RTools (*for building packages for R*)\
--   phantomjs (*for saving still images of animated networks, such as transmission chains*)
+-   TinyTeX (for compiling an RMarkdown document to PDF).\
+-   Pandoc (for compiling RMarkdown documents).\
+-   RTools (for building packages for R).\
+-   phantomjs (for saving still images of animated networks, such as transmission chains).
 
 #### TinyTex {.unnumbered}
 
@@ -183,11 +182,13 @@ This is often used to take "screenshots" of webpages. For example when you make 
 
 ### RStudio orientation {.unnumbered}
 
-**First, open RStudio.** As their icons can look very similar, be sure you are opening *RStudio* and not R.
+**First, open RStudio.** 
+
+As their icons can look very similar, be sure you are opening *RStudio* and not R.
 
 For RStudio to work you must also have R installed on the computer (see above for installation instructions).
 
-**RStudio** is an interface (GUI) for easier use of **R**. You can think of R as being the engine of a vehicle, doing the crucial work, and RStudio as the body of the vehicle (with seats, accessories, etc.) that helps you actually use the engine to move forward! You can see the complete RStudio user-interface cheatsheet (PDF) [here](https://www.rstudio.com/wp-content/uploads/2016/01/rstudio-IDE-cheatsheet.pdf)
+**RStudio** is an interface (GUI) for easier use of **R**. You can think of R as being the engine of a vehicle, doing the crucial work, and RStudio as the body of the vehicle (with seats, accessories, etc.) that helps you actually use the engine to move forward! You can see the complete RStudio user-interface cheatsheet (PDF) [here](https://rstudio.github.io/cheatsheets/html/rstudio-ide.html).
 
 By default RStudio displays four rectangle panes.
 
@@ -232,50 +233,53 @@ knitr::include_graphics(here::here("images", "RStudio_tools_options.png"))
 
 **Restart**
 
-If your R freezes, you can re-start R by going to the Session menu and clicking "Restart R". This avoids the hassle of closing and opening RStudio. Everything in your R environment will be removed when you do this.
+If your R freezes, you can re-start R by going to the Session menu and clicking "Restart R". This avoids the hassle of closing and opening RStudio. 
+
+
+<span style="color: orange;">**_CAUTION:_** Everything in your R environment will be removed when you do this.
 
 ### Keyboard shortcuts {.unnumbered}
 
-Some very useful keyboard shortcuts are below. See all the keyboard shortcuts for Windows, Max, and Linux in the second page of this RStudio [user interface cheatsheet](https://www.rstudio.com/wp-content/uploads/2016/01/rstudio-IDE-cheatsheet.pdf).
+Some very useful keyboard shortcuts are below. See all the keyboard shortcuts for Windows, Max, and Linux [Rstudio user interface cheatsheet](https://rstudio.github.io/cheatsheets/html/rstudio-ide.html#keyboard-shortcuts).
 
 +----------------------------------+------------------------+--------------------------------------------------------------------------------------------------------------------------------+
 | Windows/Linux                    | Mac                    | Action                                                                                                                         |
 +==================================+========================+================================================================================================================================+
-| Esc                              | Esc                    | Interrupt current command (useful if you accidentally ran an incomplete command and cannot escape seeing "+" in the R console) |
+| Esc                              | Esc                    | Interrupt current command (useful if you accidentally ran an incomplete command and cannot escape seeing "+" in the R console). |
 +----------------------------------+------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Ctrl+s                           | Cmd+s                  | Save (script)                                                                                                                  |
+| Ctrl+s                           | Cmd+s                  | Save (script).                                                                                                                  |
 +----------------------------------+------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Tab                              | Tab                    | Auto-complete                                                                                                                  |
+| Tab                              | Tab                    | Auto-complete.                                                                                                                  |
 +----------------------------------+------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Ctrl + Enter                     | Cmd + Enter            | Run current line(s)/selection of code                                                                                          |
+| Ctrl + Enter                     | Cmd + Enter            | Run current line(s)/selection of code.                                                                                          |
 +----------------------------------+------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Ctrl + Shift + C                 | Cmd + Shift + c        | comment/uncomment the highlighted lines                                                                                        |
+| Ctrl + Shift + C                 | Cmd + Shift + c        | Comment/uncomment the highlighted lines.                                                                                        |
 +----------------------------------+------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Alt + -                          | Option + -             | Insert `<-`                                                                                                                    |
+| Alt + -                          | Option + -             | Insert `<-`.                                                                                                                    |
 +----------------------------------+------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Ctrl + Shift + m                 | Cmd + Shift + m        | Insert `%>%`                                                                                                                   |
+| Ctrl + Shift + m                 | Cmd + Shift + m        | Insert `%>%`.                                                                                                                   |
 +----------------------------------+------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Ctrl + l                         | Cmd + l                | Clear the R console                                                                                                            |
+| Ctrl + l                         | Cmd + l                | Clear the R console.                                                                                                            |
 +----------------------------------+------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Ctrl + Alt + b                   | Cmd + Option + b       | Run from start to current line                                                                                                 |
+| Ctrl + Alt + b                   | Cmd + Option + b       | Run from start to current. line                                                                                                 |
 +----------------------------------+------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Ctrl + Alt + t                   | Cmd + Option + t       | Run the current code section (R Markdown)                                                                                      |
+| Ctrl + Alt + t                   | Cmd + Option + t       | Run the current code section (R Markdown).                                                                                      |
 +----------------------------------+------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Ctrl + Alt + i                   | Cmd + Shift + r        | Insert code chunk (into R Markdown)                                                                                            |
+| Ctrl + Alt + i                   | Cmd + Shift + r        | Insert code chunk (into R Markdown).                                                                                            |
 +----------------------------------+------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Ctrl + Alt + c                   | Cmd + Option + c       | Run current code chunk (R Markdown)                                                                                            |
+| Ctrl + Alt + c                   | Cmd + Option + c       | Run current code chunk (R Markdown).                                                                                            |
 +----------------------------------+------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| up/down arrows in R console      | Same                   | Toggle through recently run commands                                                                                           |
+| up/down arrows in R console      | Same                   | Toggle through recently run commands.                                                                                           |
 +----------------------------------+------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Shift + up/down arrows in script | Same                   | Select multiple code lines                                                                                                     |
+| Shift + up/down arrows in script | Same                   | Select multiple code lines.                                                                                                     |
 +----------------------------------+------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Ctrl + f                         | Cmd + f                | Find and replace in current script                                                                                             |
+| Ctrl + f                         | Cmd + f                | Find and replace in current script.                                                                                             |
 +----------------------------------+------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Ctrl + Shift + f                 | Cmd + Shift + f        | Find in files (search/replace across many scripts)                                                                             |
+| Ctrl + Shift + f                 | Cmd + Shift + f        | Find in files (search/replace across many scripts).                                                                             |
 +----------------------------------+------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Alt + l                          | Cmd + Option + l       | Fold selected code                                                                                                             |
+| Alt + l                          | Cmd + Option + l       | Fold selected code.                                                                                                             |
 +----------------------------------+------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Shift + Alt + l                  | Cmd + Shift + Option+l | Unfold selected code                                                                                                           |
+| Shift + Alt + l                  | Cmd + Shift + Option+l | Unfold selected code.                                                                                                           |
 +----------------------------------+------------------------+--------------------------------------------------------------------------------------------------------------------------------+
 
 [***TIP:*** Use your Tab key when typing to engage RStudio's auto-complete functionality. This can prevent spelling errors. Press Tab while typing to produce a drop-down menu of likely functions and objects, based on what you have typed so far.]{style="color: darkgreen;"}
@@ -288,9 +292,9 @@ Functions are at the core of using R. Functions are how you perform tasks and op
 
 This basics section on functions explains:
 
--   What a function is and how they work\
--   What function *arguments* are\
--   How to get help understanding a function
+-   What a function is and how they work.\
+-   What function *arguments* are.\
+-   How to get help understanding a function.
 
 *A quick note on syntax:* In this handbook, functions are written in code-text with open parentheses, like this: `filter()`. As explained in the [packages](#packages) section, functions are downloaded within *packages*. In this handbook, package names are written in **bold**, like **dplyr**. Sometimes in example code you may see the function name linked explicitly to the name of its package with two colons (`::`) like this: `dplyr::filter()`. The purpose of this linkage is explained in the packages section.
 
@@ -298,7 +302,7 @@ This basics section on functions explains:
 
 ### Simple functions {.unnumbered}
 
-**A function is like a machine that receives inputs, does some action with those inputs, and produces an output.** What the output is depends on the function.
+**A function is like a machine that receives inputs, carries out an action with those inputs, and produces an output.** What the output is depends on the function.
 
 **Functions typically operate upon some object placed within the function's parentheses**. For example, the function `sqrt()` calculates the square root of a number:
 
@@ -321,9 +325,9 @@ summary(linelist$age)
 
 Functions often ask for several inputs, called ***arguments***, located within the parentheses of the function, usually separated by commas.
 
--   Some arguments are required for the function to work correctly, others are optional\
--   Optional arguments have default settings\
--   Arguments can take character, numeric, logical (TRUE/FALSE), and other inputs
+-   Some arguments are required for the function to work correctly, others are optional.\
+-   Optional arguments have default settings.\
+-   Arguments can take character, numeric, logical (TRUE/FALSE), and other inputs.
 
 Here is a fun fictional function, called `oven_bake()`, as an example of a typical function. It takes an input object (e.g. a dataset, or in this example "dough") and performs operations on it as specified by additional arguments (`minutes =` and `temperature =`). The output can be printed to the console, or saved as an object using the assignment operator `<-`.
 
@@ -364,7 +368,7 @@ age_pyramid(linelist, "age_cat5", "gender")
 **A more complex `age_pyramid()` command might include the *optional* arguments to:**
 
 -   Show proportions instead of counts (set `proportional = TRUE` when the default is `FALSE`)\
--   Specify the two colors to use (`pal =` is short for "palette" and is supplied with a vector of two color names. See the [objects](#objectstructure) page for how the function `c()` makes a vector)
+-   Specify the two colors to use (`pal =` is short for "palette" and is supplied with a vector of two color names. See the [objects](https://epirhandbook.com/new_pages/basics.html#objects) page for how the function `c()` makes a vector)
 
 [***NOTE:*** For arguments that you specify with both parts of the argument (e.g. `proportional = TRUE`), their order among all the arguments does not matter.]{style="color: black;"}
 
@@ -377,6 +381,7 @@ age_pyramid(
   pal = c("orange", "purple")  # colors
   )
 ```
+***TIP:*** Remember that you can put `?` before a function to see what arguments the function can take, and which arguments are needed and which arguments have default values. For example `?age_pyramid'.
 
 <!-- ======================================================= -->
 
@@ -384,9 +389,9 @@ age_pyramid(
 
 R is a language that is oriented around functions, so you should feel empowered to write your own functions. Creating functions brings several advantages:
 
--   To facilitate modular programming - the separation of code in to independent and manageable pieces\
--   Replace repetitive copy-and-paste, which can be error prone\
--   Give pieces of code memorable names
+-   To facilitate modular programming - the separation of code in to independent and manageable pieces.\
+-   Replace repetitive copy-and-paste, which can be error prone.\
+-   Give pieces of code memorable names.
 
 How to write a function is covered in-depth in the [Writing functions](writing_functions.qmd) page.
 
