--- a/new_pages/basics.qmd
+++ b/new_pages/basics.qmd
@@ -479,7 +479,7 @@ On installation, R contains **"base"** packages and functions that perform commo
 
 *Functions* are contained within **packages** which can be downloaded ("installed") to your computer from the internet. Once a package is downloaded, it is stored in your "library". You can then access the functions it contains during your current R session by "loading" the package.
 
-*Think of R as your personal library*: When you download a package, your library gains a new book of functions, but each time you want to use a function in that book, you must borrow ("load") that book from your library.
+*Think of R as your personal library*: When you download a package, your library gains a new book of functions, but each time you want to use a function in that book, you must borrow,"load", that book from your library.
 
 In summary: to use the functions available in an R package, 2 steps must be implemented:
 
@@ -488,7 +488,7 @@ In summary: to use the functions available in an R package, 2 steps must be impl
 
 #### Your library {.unnumbered}
 
-Your "library" is actually a folder on your computer, containing a folder for each package that has been installed. Find out where R is installed in your computer, and look for a folder called "win-library". For example: `R\win-library\4.0` (the 4.0 is the R version - you'll have a different library for each R version you've downloaded).
+Your "library" is actually a folder on your computer, containing a folder for each package that has been installed. Find out where R is installed in your computer, and look for a folder called "win-library". For example: `R\win-library\4.4.1` (the 4.4.1 is the R version - you'll have a different library for each R version you've downloaded).
 
 You can print the file path to your library by entering `.libPaths()` (empty parentheses). This becomes especially important if working with [R on network drives](network_drives.qmd).
 
@@ -502,14 +502,16 @@ Are you worried about viruses and security when downloading a package from CRAN?
 
 In this handbook, we suggest using the **pacman** package (short for "package manager"). It offers a convenient function `p_load()` which will install a package if necessary *and* load it for use in the current R session.
 
-The syntax quite simple. Just list the names of the packages within the `p_load()` parentheses, separated by commas. This command will install the **rio**, **tidyverse**, and **here** packages if they are not yet installed, and will load them for use. This makes the `p_load()` approach convenient and concise if sharing scripts with others. Note that package names are case-sensitive.
+The syntax quite simple. Just list the names of the packages within the `p_load()` parentheses, separated by commas. This command will install the **rio**, **tidyverse**, and **here** packages if they are not yet installed, and will load them for use. This makes the `p_load()` approach convenient and concise if sharing scripts with others. 
+
+Note that package names are case-sensitive.
 
 ```{r}
 # Install (if necessary) and load packages for use
 pacman::p_load(rio, tidyverse, here)
 ```
 
-Note that we have used the syntax `pacman::p_load()` which explicitly writes the package name (**pacman**) prior to the function name (`p_load()`), connected by two colons `::`. This syntax is useful because it also loads the **pacman** package (assuming it is already installed).
+Here we have used the syntax `pacman::p_load()` which explicitly writes the package name (**pacman**) prior to the function name (`p_load()`), connected by two colons `::`. This syntax is useful because it also loads the **pacman** package (assuming it is already installed).
 
 There are alternative **base** R functions that you will see often. The **base** R function for installing a package is `install.packages()`. The name of the package to install must be provided in the parentheses *in quotes*. If you want to install multiple packages in one command, they must be listed within a character vector `c()`.
 
@@ -534,11 +536,11 @@ library(rio)
 library(here)
 ```
 
-To check whether a package in installed and/or loaded, you can view the Packages pane in RStudio. If the package is installed, it is shown there with version number. If its box is checked, it is loaded for the current session.
+To check whether a package in installed or loaded, you can view the Packages pane in RStudio. If the package is installed, it is shown there with version number. If its box is checked, it is loaded for the current session.
 
 **Install from Github**
 
-Sometimes, you need to install a package that is not yet available from CRAN. Or perhaps the package is available on CRAN but you want the *development version* with new features not yet offered in the more stable published CRAN version. These are often hosted on the website [github.com](https://github.com/) in a free, public-facing code "repository". Read more about Github in the handbook page on [Version control and collaboration with Git and Github].
+Sometimes, you need to install a package that is not yet available from CRAN. Or perhaps the package is available on CRAN but you want the *development version* with new features not yet offered in the more stable published CRAN version. These are often hosted on the website [github.com](https://github.com/) in a free, public-facing code "repository". Read more about Github in the handbook page on [Version control and collaboration with Git and Github](https://epirhandbook.com/new_pages/collaboration.html).
 
 To download R packages from Github, you can use the function `p_load_gh()` from **pacman**, which will install the package if necessary, and load it for use in your current R session. Alternatives to install include using the **remotes** or **devtools** packages. Read more about all the **pacman** functions in the [package documentation](https://cran.r-project.org/web/packages/pacman/pacman.pdf).
 
@@ -546,7 +548,7 @@ To install from Github, you have to provide more information. You must provide:
 
 1)  The Github ID of the repository owner
 2)  The name of the repository that contains the package\
-3)  *(optional) The name of the "branch" (specific development version) you want to download*
+3)  Optional: *The name of the "branch" (specific development version) you want to download*
 
 In the examples below, the first word in the quotation marks is the Github ID of the repository owner, after the slash is the name of the repository (the name of the package).
 
@@ -600,7 +602,7 @@ linelist <- rio::import("linelist.xlsx", which = "Sheet1")
 
 ### Function help {.unnumbered}
 
-To read more about a function, you can search for it in the Help tab of the lower-right RStudio. You can also run a command like `?thefunctionname` (put the name of the function after a question mark) and the Help page will appear in the Help pane. Finally, try searching online for resources.
+To read more about a function, you can search for it in the Help tab of the lower-right RStudio. You can also run a command like `?thefunctionname` (for example, to get help for the function `p_load` you would write `?p_load`) and the Help page will appear in the Help pane. Finally, try searching online for resources.
 
 ### Update packages {.unnumbered}
 
@@ -608,7 +610,7 @@ You can update packages by re-installing them. You can also click the green "Upd
 
 ### Delete packages {.unnumbered}
 
-Use `p_delete()` from **pacman**, or `remove.packages()` from **base** R. Alternatively, go find the folder which contains your library and manually delete the folder.
+Use `p_delete()` from **pacman**, or `remove.packages()` from **base** R.
 
 ### Dependencies {.unnumbered}
 
@@ -653,16 +655,16 @@ See the page on [Suggested packages](packages_suggested.qmd) for a listing of pa
 
 Scripts are a fundamental part of programming. They are documents that hold your commands (e.g. functions to create and modify datasets, print visualizations, etc). You can save a script and run it again later. There are many advantages to storing and running your commands from a script (vs. typing commands one-by-one into the R console "command line"):
 
--   Portability - you can share your work with others by sending them your scripts\
--   Reproducibility - so that you and others know exactly what you did\
--   Version control - so you can track changes made by yourself or colleagues\
--   Commenting/annotation - to explain to your colleagues what you have done
+-   Portability - you can share your work with others by sending them your scripts.\
+-   Reproducibility - so that you and others know exactly what you did.\
+-   Version control - so you can track changes made by yourself or colleagues.\
+-   Commenting/annotation - to explain to your colleagues what you have done.
 
 ### Commenting {.unnumbered}
 
 In a script you can also annotate ("comment") around your R code. Commenting is helpful to explain to yourself and other readers what you are doing. You can add a comment by typing the hash symbol (\#) and writing your comment after it. The commented text will appear in a different color than the R code.
 
-Any code written after the \# will not be run. Therefore, placing a \# before code is also a useful way to temporarily block a line of code ("comment out") if you do not want to delete it). You can comment out/in multiple lines at once by highlighting them and pressing Ctrl+Shift+c (Cmd+Shift+c in Mac).
+Any code written after the \# will not be run. Therefore, placing a \# before code is also a useful way to temporarily block a line of code ("comment out") if you do not want to delete it. You can comment out/in multiple lines at once by highlighting them and pressing Ctrl+Shift+c (Cmd+Shift+c in Mac).
 
 ```{r, eval = F}
 # A comment can be on a line by itself
@@ -673,9 +675,10 @@ linelist <- import("linelist_raw.xlsx") %>%   # a comment can also come after co
 
 ```
 
--   Comment on *what* you are doing *and on **why** you are doing it*.\
--   Break your code into logical sections\
--   Accompany your code with a text step-by-step description of what you are doing (e.g. numbered steps)
+There are a few general ideas to follow when writing your scripts in order to make them accessible.
+-   Add comments on *what* you are doing *and on **why** you are doing it*.\
+-   Break your code into logical sections.\
+-   Accompany your code with a text step-by-step description of what you are doing (e.g. numbered steps).
 
 ### Style {.unnumbered}
 
@@ -695,9 +698,11 @@ knitr::include_graphics(here::here("images", "example_script.png"))
 
 <!-- ======================================================= -->
 
-### R markdown {.unnumbered}
+### R markdown and Quarto {.unnumbered}
 
-An R markdown script is a type of R script in which the script itself *becomes* an output document (PDF, Word, HTML, Powerpoint, etc.). These are incredibly useful and versatile tools often used to create dynamic and automated reports. Even this website and handbook is produced with R markdown scripts!
+An [R Markdown](https://rmarkdown.rstudio.com/) or [Quarto](https://quarto.org/docs/computations/r.html) script are types of R script in which the script itself *becomes* an output document (PDF, Word, HTML, Powerpoint, etc.). These are incredibly useful and versatile tools often used to create dynamic and automated reports. 
+
+Even this website and handbook is produced with Quarto scripts!
 
 It is worth noting that beginner R users can also use R Markdown - do not be intimidated! To learn more, see the handbook page on [Reports with R Markdown](rmarkdown.qmd) documents.
 
@@ -713,13 +718,13 @@ There is no difference between writing in a Rmarkdown vs an R notebook. However 
 
 Shiny apps/websites are contained within one script, which must be named `app.R`. This file has three components:
 
-1)  A user interface (ui)\
-2)  A server function\
-3)  A call to the `shinyApp` function
+1)  A user interface (ui).\
+2)  A server function.\
+3)  A call to the `shinyApp` function.
 
 See the handbook page on [Dashboards with Shiny](shiny_basics.qmd), or this online tutorial: [Shiny tutorial](https://shiny.rstudio.com/tutorial/written-tutorial/lesson1/)
 
-*In older times, the above file was split into two files (`ui.R` and `server.R`)*
+*In previous versions, the above file was split into two files (`ui.R` and `server.R`)*
 
 ### Code folding {.unnumbered}
 
@@ -729,7 +734,7 @@ To do this, create a text header with \#, write your header, and follow it with 
 
 To expand the code, either click the arrow in the gutter again, or the dual-arrow icon. There are also keyboard shortcuts as explained in the [RStudio section](#rstudio) of this page.
 
-By creating headers with \#, you will also activate the Table of Contents at the bottom of your script (see below) that you can use to navigate your script. You can create sub-headers by adding more \# symbols, for example \# for primary, \#\# for seconary, and \#\#\# for tertiary headers.
+By creating headers with \#, you will also activate the Table of Contents at the bottom of your script (see below) that you can use to navigate your script. You can create sub-headers by adding more \# symbols, for example \# for primary, \#\# for secondary, and \#\#\# for tertiary headers.
 
 Below are two versions of an example script. On the left is the original with commented headers. On the right, four dashes have been written after each header, making them collapsible. Two of them have been collapsed, and you can see that the Table of Contents at the bottom now shows each section.
 
@@ -759,6 +764,7 @@ knitr::include_graphics(here::here("images", "working_directory_1.png"))
 ### Recommended approach {.unnumbered}
 
 **See the page on [R projects](r_projects.qmd) for details on our recommended approach to managing your working directory.**\
+
 A common, efficient, and trouble-free way to manage your working directory and file paths is to combine these 3 elements in an [R project](r_projects.qmd)-oriented workflow:
 
 1)  An R Project to store all your files (see page on [R projects](r_projects.qmd))\
@@ -769,7 +775,11 @@ A common, efficient, and trouble-free way to manage your working directory and f
 
 ### Set by command {.unnumbered}
 
-Until recently, many people learning R were taught to begin their scripts with a `setwd()` command. Please instead consider using an [R project][r_projects.qmd]-oriented workflow and read the [reasons for not using `setwd()`](https://www.tidyverse.org/blog/2017/12/workflow-vs-script/). In brief, your work becomes specific to your computer, file paths used to import and export files become "brittle", and this severely hinders collaboration and use of your code on any other computer. There are easy alternatives!
+Until recently, many people learning R were taught to begin their scripts with a `setwd()` command. 
+
+Please instead consider using an [R project](r_projects.qmd)-oriented workflow and read the [reasons for not using `setwd()`](https://www.tidyverse.org/blog/2017/12/workflow-vs-script/). 
+
+In brief, your work becomes specific to your computer. This means that file paths used to import and export files need to be changed if used on a different computer, or by different collaborators.
 
 As noted above, although we do not recommend this approach in most circumstances, you can use the command `setwd()` with the desired folder file path in quotations, for example:
 
@@ -777,7 +787,7 @@ As noted above, although we do not recommend this approach in most circumstances
 setwd("C:/Documents/R Files/My analysis")
 ```
 
-[***DANGER:*** Setting a working directory with `setwd()` *can* be "brittle" if the file path is specific to one computer. Instead, use file paths relative to an R Project root directory (with the **here** package). ]{style="color: red;"}
+[***DANGER:*** Setting a working directory with `setwd()` *can* be "brittle" if the file path is specific to one computer. Instead, use file paths relative to an R Project root directory, such as with the [**here** package]. ]{style="color: red;"}
 
 <!-- ======================================================= -->
 
@@ -819,7 +829,9 @@ Below is an example of an "absolute" or "full address" file path. These will lik
 
 **Slash direction**
 
-*If typing in a file path, be aware the direction of the slashes.* Use *forward slashes* (`/`) to separate the components ("data/provincial.csv"). For Windows users, the default way that file paths are displayed is with *back slashes* (\\) - so you will need to change the direction of each slash. If you use the **here** package as described in the [R projects](r_projects.qmd) page the slash direction is not an issue.
+*If typing in a file path, be aware the direction of the slashes.* 
+
+Use *forward slashes* (`/`) to separate the components ("data/provincial.csv"). For Windows users, the default way that file paths are displayed is with *back slashes* (\\) - so you will need to change the direction of each slash. If you use the **here** package as described in the [R projects](r_projects.qmd) page the slash direction is not an issue.
 
 **Relative file paths**
 
@@ -830,7 +842,7 @@ We generally recommend providing "relative" filepaths instead - that is, the pat
 linelist <- import(here("data", "clean", "linelists", "marin_country.csv"))
 ```
 
-Even if using relative file paths within an R project, you can still use absolute paths to import/export data outside your R project.
+Even if using relative file paths within an R project, you can still use absolute paths to import and export data outside your R project.
 
 <!-- ======================================================= -->
 
@@ -838,16 +850,17 @@ Even if using relative file paths within an R project, you can still use absolut
 
 Everything in R is an object, and R is an "object-oriented" language. These sections will explain:
 
--   How to create objects (`<-`)
--   Types of objects (e.g. data frames, vectors..)\
--   How to access subparts of objects (e.g. variables in a dataset)\
--   Classes of objects (e.g. numeric, logical, integer, double, character, factor)
+-   How to create objects (`<-`).
+-   Types of objects (e.g. data frames, vectors..).\
+-   How to access subparts of objects (e.g. variables in a dataset).\
+-   Classes of objects (e.g. numeric, logical, integer, double, character, factor).
 
 <!-- ======================================================= -->
 
 ### Everything is an object {.unnumbered}
 
 *This section is adapted from the [R4Epis project](https://r4epis.netlify.app/training/r_basics/objects/).*\
+
 Everything you store in R - datasets, variables, a list of village names, a total population number, even outputs such as graphs - are **objects** which are **assigned a name** and **can be referenced** in later commands.
 
 An object exists when you have assigned it a value (see the assignment section below). When it is assigned a value, the object appears in the Environment (see the upper right pane of RStudio). It can then be operated upon, manipulated, changed, and re-defined.
@@ -904,7 +917,7 @@ You can read more about importing and exporting datasets with the section on [Im
 
 -   Object names must not contain spaces, but you should use underscore (\_) or a period (.) instead of a space.\
 -   Object names are case-sensitive (meaning that Dataset_A is different from dataset_A).
--   Object names must begin with a letter (cannot begin with a number like 1, 2 or 3).
+-   Object names must begin with a letter (they cannot begin with a number like 1, 2 or 3).
 
 **Outputs**
 
@@ -927,7 +940,7 @@ gen_out_table
 
 **Columns**
 
-Columns in a dataset are also objects and can be defined, over-written, and created as described below in the section on Columns.
+Columns in a dataset are also objects and can be defined, over-written, and created as described below in the section on [Columns](https://epirhandbook.com/new_pages/basics.html#columnsvariables).
 
 You can use the assignment operator from **base** R to create a new column. Below, the new column `bmi` (Body Mass Index) is created, and for each row the new value is result of a mathematical operation on the row's value in the `wt_kg` and `ht_cm` columns.
 
@@ -977,6 +990,7 @@ All the objects stored in R have a *class* which tells R how to handle the objec
 +------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
 | Class      | Explanation                                                                                                                                                                             | Examples                                                                                              |
 +============+=========================================================================================================================================================================================+=======================================================================================================+
+
 | Character  | These are text/words/sentences **"within quotation marks"**. Math cannot be done on these objects.                                                                                      | "Character objects are in quotation marks"                                                            |
 +------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
 | Integer    | Numbers that are **whole only** (no decimals)                                                                                                                                           | -5, 14, or 2000                                                                                       |
